--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spell-checker-js",
-  "version": "1.2.5",
+  "version": "1.0.0",
   "description": "Simple expandable tool for spell checking",
   "main": "dist/index.js",
   "engines": {
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/danakt/spell-checker.js.git"
+    "url": "git+https://github.com/mehdiraized/spell-checker.js.git"
   },
   "keywords": [
     "spell",
@@ -33,11 +33,12 @@
     "spellchecker",
     "language",
     "russian",
+    "farsi",
     "english"
   ],
-  "author": "Danakt Frost <mail@danakt.ru>",
+  "author": "Mehdi Rezaei <info@mehd.ir>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/danakt/spell-checker.js/issues"
+    "url": "https://github.com/mehdiraized/spell-checker.js/issues"
   }
 }
