--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "spell-checker-js",
+  "name": "@mehdiraized/spell-checker-js",
   "version": "1.0.0",
   "description": "Simple expandable tool for spell checking",
   "main": "dist/index.js",
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=8.0.0"
   },
   "dependencies": {
     "iconv-lite": "^0.5.1",
