--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "iconv-lite": "^0.5.1"
+    "iconv-lite": "^0.5.1",
+    "xregexp": "^4.3.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
